# rust-embedded-gui

./: Cargo.toml  readme.md
.github/workflows/: rust.yml
esptest/: Cargo.toml
esptest/src/: main.rs
examples/: custom_view.rs  simulator.rs
src/: button.rs  comps.rs  device.rs  form.rs  geom.rs  gfx.rs  grid.rs  input.rs  label.rs  layouts.rs  lib.rs  list_view.rs  panel.rs  scene.rs  tabbed_panel.rs  test.rs  text_input.rs  toggle_button.rs  toggle_group.rs  util.rs  view.rs
