[package]
name = "rust-embedded-gui"
version = "0.1.0"
edition = "2024"

[dependencies]
hashbrown = "0.16.0"
log = "0.4.27"
env_logger = { version = "0.11.8", optional = true }
embedded-graphics = { version = "0.8.1" }
embedded-graphics-simulator = { version = "0.7.0", optional = true }
test-log = { version = "0.2.18", optional = true }

[features]
std = ["env_logger", "embedded-graphics-simulator"]
