[package]
name = "iris-ui"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "UI toolkit for no_std embedded Rust"
readme = "readme.md"
keywords = ["gui", "no_std", "embedded"]

[dependencies]
hashbrown = "0.16.0"
log = "0.4.27"
env_logger = { version = "0.11.8", optional = true }
embedded-graphics = { version = "0.8.1" }
embedded-graphics-simulator = { version = "0.7.0", optional = true, default-features = false }
test-log = { version = "0.2.18", optional = true }
embedded-mogeefont = "0.1.0"

[features]
std = ["env_logger", "embedded-graphics-simulator", "test-log", "embedded-graphics-simulator/with-sdl"]
headless = ["env_logger", "embedded-graphics-simulator", "test-log"]


[[example]]
name = "simulator"
required-features = ["std"]