[package]
name = "esptest"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "esptest"
path = "./src/main.rs"

[dependencies]
log = "0.4.27"
embedded-hal-bus = "0.3.0"
esp-println = { version = "0.15.0", features = ["esp32s3", "log-04"] }
esp-alloc = "0.8.0"
esp-hal = { version = "1.0.0-rc.0", features = ["esp32s3", "unstable", "log-04"] }
embedded-graphics = "0.8.1"
mipidsi = "0.9.0"
esp-bootloader-esp-idf = "0.1.0"
gui2 = { path="../" }
static_cell = { version = "2.1.0", features = ["nightly"] }


[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
